Update some files implementation to Java 17